--- a/x-pack/solutions/observability/plugins/observability/moon.yml
+++ b/x-pack/solutions/observability/plugins/observability/moon.yml
@@ -152,6 +152,7 @@ dependsOn:
   - '@kbn/management-settings-ids'
   - '@kbn/observability-agent-builder-plugin'
   - '@kbn/kql'
+  - '@kbn/lens-common'
 tags:
   - plugin
   - prod
