add agent builder in sample data

--- a/x-pack/platform/plugins/shared/agent_builder/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/agent_builder/kibana.jsonc
@@ -40,7 +40,8 @@
       "cloud",
       "licenseManagement",
       "workflowsManagement",
-      "usageCollection"
+      "usageCollection",
+      "home",
     ],
     "extraPublicDirs": []
   }
