--- a/src/core/packages/chrome/browser-internal/moon.yml
+++ b/src/core/packages/chrome/browser-internal/moon.yml
@@ -68,7 +68,7 @@ dependsOn:
   - '@kbn/shared-ux-error-boundary'
   - '@kbn/core-chrome-app-menu-components'
   - '@kbn/shared-ux-label-formatter'
-  - '@kbn/core-chrome-sidebar'
+  - '@kbn/core-chrome-sidebar-internal'
 tags:
   - shared-browser
   - package
