--- a/src/core/packages/chrome/sidebar-internal/kibana.jsonc
+++ b/src/core/packages/chrome/sidebar-internal/kibana.jsonc
@@ -1,6 +1,6 @@
 {
-  "type": "shared-common",
-  "id": "@kbn/core-chrome-sidebar-types",
+  "type": "shared-browser",
+  "id": "@kbn/core-chrome-sidebar-internal",
   "owner": "@elastic/appex-sharedux",
   "group": "platform",
   "visibility": "shared"
