--- a/src/core/packages/chrome/browser-internal/tsconfig.json
+++ b/src/core/packages/chrome/browser-internal/tsconfig.json
@@ -67,7 +67,7 @@
     "@kbn/shared-ux-error-boundary",
     "@kbn/core-chrome-app-menu-components",
     "@kbn/shared-ux-label-formatter",
-    "@kbn/core-chrome-sidebar",
+    "@kbn/core-chrome-sidebar-internal",
     "@kbn/core-chrome-sidebar-context",
   ],
   "exclude": [
