--- a/src/core/packages/chrome/browser-mocks/moon.yml
+++ b/src/core/packages/chrome/browser-mocks/moon.yml
@@ -23,7 +23,7 @@ dependsOn:
   - '@kbn/core-chrome-browser'
   - '@kbn/core-chrome-browser-internal'
   - '@kbn/lazy-object'
-  - '@kbn/core-chrome-sidebar'
+  - '@kbn/core-chrome-sidebar-internal'
 tags:
   - shared-browser
   - package
