--- a/src/core/packages/chrome/browser-mocks/tsconfig.json
+++ b/src/core/packages/chrome/browser-mocks/tsconfig.json
@@ -17,7 +17,7 @@
     "@kbn/core-chrome-browser",
     "@kbn/core-chrome-browser-internal",
     "@kbn/lazy-object",
-    "@kbn/core-chrome-sidebar"
+    "@kbn/core-chrome-sidebar-internal"
   ],
   "exclude": [
     "target/**/*",
