--- a/src/core/packages/chrome/sidebar-internal/tsconfig.json
+++ b/src/core/packages/chrome/sidebar-internal/tsconfig.json
@@ -6,11 +6,18 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "../../../../../typings/emotion.d.ts"
   ],
   "exclude": [
     "target/**/*"
   ],
   "kbn_references": [
+    "@kbn/i18n",
+    "@kbn/use-observable",
+    "@kbn/zod",
+    "@kbn/core-chrome-layout-utils",
+    "@kbn/core-chrome-layout-components",
     "@kbn/core-chrome-sidebar",
+    "@kbn/core-chrome-sidebar-context",
   ]
 }
