--- a/examples/sidebar_examples/tsconfig.json
+++ b/examples/sidebar_examples/tsconfig.json
@@ -17,7 +17,8 @@
   "kbn_references": [
     "@kbn/core",
     "@kbn/developer-examples-plugin",
-    "@kbn/core-chrome-sidebar-internal",
+    "@kbn/core-chrome-sidebar",
+    "@kbn/core-chrome-sidebar-components",
     "@kbn/zod"
   ]
 }
