--- a/src/core/packages/chrome/browser-internal/tsconfig.json
+++ b/src/core/packages/chrome/browser-internal/tsconfig.json
@@ -69,6 +69,7 @@
     "@kbn/shared-ux-label-formatter",
     "@kbn/core-chrome-sidebar-internal",
     "@kbn/core-chrome-sidebar-context",
+    "@kbn/core-chrome-sidebar-components",
   ],
   "exclude": [
     "target/**/*",
