--- a/src/core/packages/chrome/browser/tsconfig.json
+++ b/src/core/packages/chrome/browser/tsconfig.json
@@ -30,7 +30,7 @@
     "@kbn/deeplinks-workflows",
     "@kbn/deeplinks-agent-builder",
     "@kbn/deeplinks-data-sources",
-    "@kbn/core-chrome-sidebar-internal"
+    "@kbn/core-chrome-sidebar"
   ],
   "exclude": [
     "target/**/*",
