--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -384,6 +384,8 @@
       "@kbn/core-chrome-navigation/*": ["src/core/packages/chrome/navigation/*"],
       "@kbn/core-chrome-sidebar": ["src/core/packages/chrome/sidebar"],
       "@kbn/core-chrome-sidebar/*": ["src/core/packages/chrome/sidebar/*"],
+      "@kbn/core-chrome-sidebar-components": ["src/core/packages/chrome/sidebar-components"],
+      "@kbn/core-chrome-sidebar-components/*": ["src/core/packages/chrome/sidebar-components/*"],
       "@kbn/core-chrome-sidebar-context": ["src/core/packages/chrome/sidebar-context"],
       "@kbn/core-chrome-sidebar-context/*": ["src/core/packages/chrome/sidebar-context/*"],
       "@kbn/core-chrome-sidebar-internal": ["src/core/packages/chrome/sidebar-internal"],
