--- a/x-pack/platform/plugins/shared/fleet/tsconfig.json
+++ b/x-pack/platform/plugins/shared/fleet/tsconfig.json
@@ -3,7 +3,13 @@
   "compilerOptions": {
     "outDir": "target/types"
   },
-  "exclude": ["cypress.config.ts", "cypress.config.space_awareness.ts", "target/**/*"],
+  "exclude": [
+    "cypress.config.ts",
+    "cypress.config.space_awareness.ts",
+    "cypress_ci.config.ts",
+    "cypress_ci.config.space_awareness.ts",
+    "target/**/*"
+  ],
   "include": [
     // add all the folders containing files to be compiled
     ".storybook/**/*",
@@ -16,7 +22,10 @@
     "package.json",
     "cypress.config.ts",
     "cypress.config.space_awareness.ts",
-    "../../../../../typings/**/*"
+    "cypress_ci.config.ts",
+    "cypress_ci.config.space_awareness.ts",
+    "../../../../../typings/**/*",
+    "test/scout/**/*"
   ],
   "kbn_references": [
     "@kbn/core",
@@ -127,6 +136,6 @@
     "@kbn/spaces-utils",
     "@kbn/setup-node-env",
     "@kbn/react-query",
-    "@kbn/fs",
+    "@kbn/fs"
   ]
 }
