--- a/x-pack/platform/plugins/shared/fleet/tsconfig.json
+++ b/x-pack/platform/plugins/shared/fleet/tsconfig.json
@@ -1,9 +1,15 @@
 {
   "extends": "@kbn/tsconfig-base/tsconfig.json",
   "compilerOptions": {
-    "outDir": "target/types",
+    "outDir": "target/types"
   },
-  "exclude": ["cypress.config.ts", "cypress.config.space_awareness.ts", "target/**/*"],
+  "exclude": [
+    "cypress.config.ts",
+    "cypress.config.space_awareness.ts",
+    "cypress_ci.config.ts",
+    "cypress_ci.config.space_awareness.ts",
+    "target/**/*"
+  ],
   "include": [
     // add all the folders containing files to be compiled
     ".storybook/**/*",
@@ -16,7 +22,10 @@
     "package.json",
     "cypress.config.ts",
     "cypress.config.space_awareness.ts",
-    "../../../../../typings/**/*"
+    "cypress_ci.config.ts",
+    "cypress_ci.config.space_awareness.ts",
+    "../../../../../typings/**/*",
+    "test/scout/**/*"
   ],
   "kbn_references": [
     "@kbn/core",
@@ -123,6 +132,6 @@
     "@kbn/embeddable-plugin",
     "@kbn/setup-node-env",
     "@kbn/react-query",
-    "@kbn/fs",
+    "@kbn/fs"
   ]
 }
