Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/streams_app/moon.yml
+++ b/x-pack/platform/plugins/shared/streams_app/moon.yml
@@ -107,6 +107,7 @@ dependsOn:
   - '@kbn/react-query'
   - '@kbn/timerange'
   - '@kbn/inference-common'
+  - '@kbn/core-http-common'
 tags:
   - plugin
   - prod
