Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/agent_builder/tsconfig.json
+++ b/x-pack/platform/plugins/shared/agent_builder/tsconfig.json
@@ -98,6 +98,7 @@
     "@kbn/mcp-client",
     "@kbn/react-kibana-context-theme",
     "@kbn/alerts-ui-shared",
-    "@kbn/triggers-actions-ui-plugin"
+    "@kbn/triggers-actions-ui-plugin",
+    "@kbn/home-plugin"
   ]
 }
