Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/agent_builder/moon.yml
+++ b/x-pack/platform/plugins/shared/agent_builder/moon.yml
@@ -103,6 +103,7 @@ dependsOn:
   - '@kbn/react-kibana-context-theme'
   - '@kbn/alerts-ui-shared'
   - '@kbn/triggers-actions-ui-plugin'
+  - '@kbn/home-plugin'
 tags:
   - plugin
   - prod
