--- a/src/platform/plugins/shared/discover/kibana.jsonc
+++ b/src/platform/plugins/shared/discover/kibana.jsonc
@@ -56,7 +56,8 @@
       "kibanaReact",
       "unifiedSearch",
       "savedObjects",
-      "presentationPanel"
+      "presentationPanel",
+      "triggersActionsUi"
     ],
     "extraPublicDirs": ["common"]
   }
