--- a/src/platform/packages/shared/kbn-esql-types/tsconfig.json
+++ b/src/platform/packages/shared/kbn-esql-types/tsconfig.json
@@ -7,6 +7,7 @@
   "kbn_references": [
     "@kbn/licensing-types",
     "@kbn/core-pricing-common",
+    "@kbn/kql",
   ],
   "exclude": ["target/**/*"]
 }
