--- a/src/platform/packages/shared/kbn-esql-types/moon.yml
+++ b/src/platform/packages/shared/kbn-esql-types/moon.yml
@@ -20,6 +20,7 @@ project:
 dependsOn:
   - '@kbn/licensing-types'
   - '@kbn/core-pricing-common'
+  - '@kbn/kql'
 tags:
   - shared-common
   - package
