[Lens] Init scout

--- a/x-pack/platform/plugins/shared/lens/moon.yml
+++ b/x-pack/platform/plugins/shared/lens/moon.yml
@@ -152,6 +152,7 @@ dependsOn:
   - '@kbn/react-env'
   - '@kbn/core-base-browser-mocks'
   - '@kbn/react-kibana-context-env'
+  - '@kbn/scout'
 tags:
   - plugin
   - prod
@@ -164,6 +165,7 @@ fileGroups:
     - common/**/*
     - public/**/*
     - server/**/*
+    - test/scout/**/*
     - '!target/**/*'
 tasks:
   jest:
