--- a/x-pack/solutions/security/plugins/entity_store/kibana.jsonc
+++ b/x-pack/solutions/security/plugins/entity_store/kibana.jsonc
@@ -10,6 +10,7 @@
     "server": true,
     "browser": true,
     "requiredPlugins": [
+      "spaces",
       "taskManager"
     ],
     "optionalPlugins": []
