--- a/x-pack/solutions/security/plugins/entity_store/tsconfig.json
+++ b/x-pack/solutions/security/plugins/entity_store/tsconfig.json
@@ -26,5 +26,6 @@
     "@kbn/config-schema",
     "@kbn/logging-mocks",
     "@kbn/spaces-plugin",
+    "@kbn/core-saved-objects-utils-server",
   ]
 }
