Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/solutions/security/plugins/entity_store/moon.yml
+++ b/x-pack/solutions/security/plugins/entity_store/moon.yml
@@ -31,6 +31,7 @@ dependsOn:
   - '@kbn/config-schema'
   - '@kbn/logging-mocks'
   - '@kbn/spaces-plugin'
+  - '@kbn/core-saved-objects-utils-server'
 tags:
   - plugin
   - prod
