--- a/.buildkite/pipelines/quality-gates/pipeline.tests-production.yaml
+++ b/.buildkite/pipelines/quality-gates/pipeline.tests-production.yaml
@@ -3,7 +3,7 @@
 # A failure in this pipeline build will prevent further progression to the subsequent stage.
 
 steps:
-  - label: ":kibana: SLO check"
+  - label: ":kibana: SLO check (60 minutes)"
     trigger: "serverless-quality-gates" # https://buildkite.com/elastic/serverless-quality-gates
     build:
       message: "${BUILDKITE_MESSAGE} (triggered by pipeline.tests-production.yaml)"
