--- a/src/core/packages/chrome/browser-internal/moon.yml
+++ b/src/core/packages/chrome/browser-internal/moon.yml
@@ -69,6 +69,8 @@ dependsOn:
   - '@kbn/core-chrome-app-menu-components'
   - '@kbn/shared-ux-label-formatter'
   - '@kbn/core-chrome-sidebar-internal'
+  - '@kbn/core-chrome-sidebar-context'
+  - '@kbn/core-chrome-sidebar-components'
 tags:
   - shared-browser
   - package
