--- a/x-pack/solutions/security/plugins/entity_store/moon.yml
+++ b/x-pack/solutions/security/plugins/entity_store/moon.yml
@@ -30,6 +30,7 @@ dependsOn:
   - '@kbn/core-http-server'
   - '@kbn/config-schema'
   - '@kbn/logging-mocks'
+  - '@kbn/management-settings-ids'
 tags:
   - plugin
   - prod
