--- a/src/platform/packages/private/kbn-esql-editor/tsconfig.json
+++ b/src/platform/packages/private/kbn-esql-editor/tsconfig.json
@@ -38,7 +38,7 @@
     "@kbn/react-hooks",
     "@kbn/react-kibana-context-theme",
     "@kbn/calculate-width-from-char-count",
-    "@kbn/react-field"
+    "@kbn/react-field",
     "@kbn/kql",
     "@kbn/ebt-tools",
     "@kbn/shared-ux-utility"
