[Entity Store] get security data views as source for the query

--- a/x-pack/solutions/security/plugins/entity_store/kibana.jsonc
+++ b/x-pack/solutions/security/plugins/entity_store/kibana.jsonc
@@ -11,7 +11,8 @@
     "browser": true,
     "requiredPlugins": [
       "spaces",
-      "taskManager"
+      "taskManager",
+      "dataViews"
     ],
     "optionalPlugins": []
   }
