Changes from node scripts/lint_ts_projects --fix

--- a/src/platform/packages/private/kbn-esql-editor/tsconfig.json
+++ b/src/platform/packages/private/kbn-esql-editor/tsconfig.json
@@ -41,7 +41,8 @@
     "@kbn/react-field",
     "@kbn/kql",
     "@kbn/ebt-tools",
-    "@kbn/shared-ux-utility"
+    "@kbn/shared-ux-utility",
+    "@kbn/projects-solutions-groups"
   ],
   "exclude": [
     "target/**/*",
