Changes from node scripts/regenerate_moon_projects.js --update

--- a/src/platform/packages/private/kbn-esql-editor/moon.yml
+++ b/src/platform/packages/private/kbn-esql-editor/moon.yml
@@ -43,10 +43,11 @@ dependsOn:
   - '@kbn/react-hooks'
   - '@kbn/react-kibana-context-theme'
   - '@kbn/calculate-width-from-char-count'
+  - '@kbn/react-field'
   - '@kbn/kql'
   - '@kbn/ebt-tools'
   - '@kbn/shared-ux-utility'
-  - '@kbn/react-field'
+  - '@kbn/projects-solutions-groups'
 tags:
   - shared-browser
   - package
