--- a/x-pack/solutions/workplaceai/plugins/workplace_ai_app/moon.yml
+++ b/x-pack/solutions/workplaceai/plugins/workplace_ai_app/moon.yml
@@ -46,6 +46,9 @@ dependsOn:
   - '@kbn/elastic-assistant'
   - '@kbn/ai-assistant-connector-selector-action'
   - '@kbn/core-application-browser'
+  - '@kbn/workflows-extensions'
+  - '@kbn/zod'
+  - '@kbn/workflows'
   - '@kbn/deeplinks-data-sources'
 tags:
   - plugin
