--- a/x-pack/solutions/workplaceai/plugins/workplace_ai_app/tsconfig.json
+++ b/x-pack/solutions/workplaceai/plugins/workplace_ai_app/tsconfig.json
@@ -41,6 +41,9 @@
     "@kbn/elastic-assistant",
     "@kbn/ai-assistant-connector-selector-action",
     "@kbn/core-application-browser",
+    "@kbn/workflows-extensions",
+    "@kbn/zod",
+    "@kbn/workflows",
     "@kbn/deeplinks-data-sources"
   ],
   "exclude": [
