feat: new SLO endpoint to return a summary of SLOs grouped by an attribute for an sli type

--- a/x-pack/solutions/observability/plugins/apm/moon.yml
+++ b/x-pack/solutions/observability/plugins/apm/moon.yml
@@ -153,6 +153,8 @@ dependsOn:
   - '@kbn/agent-builder-plugin'
   - '@kbn/observability-agent-builder-plugin'
   - '@kbn/kql'
+  - '@kbn/slo-plugin'
+  - '@kbn/slo-schema'
 tags:
   - plugin
   - prod
