--- a/x-pack/solutions/observability/plugins/apm/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/apm/tsconfig.json
@@ -151,6 +151,8 @@
     "@kbn/agent-builder-plugin",
     "@kbn/observability-agent-builder-plugin",
     "@kbn/kql",
+    "@kbn/slo-plugin",
+    "@kbn/slo-schema",
   ],
   "exclude": ["target/**/*"]
 }
