--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -4316,18 +4316,11 @@
   },
   "trial-companion-nba-milestone": {
     "properties": {
-      "milestoneId": {
-        "type": "integer"
-      }
-    }
-  },
-  "trial-companion-nba-milestone-user-seen": {
-    "properties": {
-      "milestoneIds": {
-        "type": "integer"
+      "dismiss": {
+        "type": "boolean"
       },
-      "userId": {
-        "type": "text"
+      "openTODOs": {
+        "type": "integer"
       }
     }
   },
