Changes from yarn openapi:bundle

--- a/package.json
+++ b/package.json
@@ -284,9 +284,11 @@
     "@kbn/content-management-user-profiles": "link:src/platform/packages/shared/content-management/user_profiles",
     "@kbn/content-management-utils": "link:src/platform/packages/shared/kbn-content-management-utils",
     "@kbn/content-packs-schema": "link:x-pack/platform/packages/shared/kbn-content-packs-schema",
+    "@kbn/control-group-renderer": "link:src/platform/packages/shared/controls/control-group-renderer",
     "@kbn/controls-constants": "link:src/platform/packages/shared/controls/controls-constants",
     "@kbn/controls-example-plugin": "link:examples/controls_example",
     "@kbn/controls-plugin": "link:src/platform/plugins/shared/controls",
+    "@kbn/controls-renderer": "link:src/platform/packages/private/kbn-controls-renderer",
     "@kbn/controls-schemas": "link:src/platform/packages/shared/controls/controls-schemas",
     "@kbn/core": "link:src/core",
     "@kbn/core-analytics-browser": "link:src/core/packages/analytics/browser",
@@ -307,6 +309,8 @@
     "@kbn/core-capabilities-common": "link:src/core/packages/capabilities/common",
     "@kbn/core-capabilities-server": "link:src/core/packages/capabilities/server",
     "@kbn/core-capabilities-server-internal": "link:src/core/packages/capabilities/server-internal",
+    "@kbn/core-chrome-app-menu": "link:src/core/packages/chrome/app-menu/core-chrome-app-menu",
+    "@kbn/core-chrome-app-menu-components": "link:src/core/packages/chrome/app-menu/core-chrome-app-menu-components",
     "@kbn/core-chrome-browser": "link:src/core/packages/chrome/browser",
     "@kbn/core-chrome-browser-internal": "link:src/core/packages/chrome/browser-internal",
     "@kbn/core-chrome-layout": "link:src/core/packages/chrome/layout/core-chrome-layout",
@@ -488,7 +492,7 @@
     "@kbn/dashboard-markdown": "link:src/platform/plugins/shared/dashboard_markdown",
     "@kbn/dashboard-plugin": "link:src/platform/plugins/shared/dashboard",
     "@kbn/dashboards-selector": "link:src/platform/packages/shared/dashboards/dashboards-selector",
-    "@kbn/data-connectors-plugin": "link:x-pack/platform/plugins/shared/data_connectors",
+    "@kbn/data-catalog-plugin": "link:x-pack/platform/plugins/shared/data_catalog",
     "@kbn/data-forge": "link:x-pack/platform/packages/shared/kbn-data-forge",
     "@kbn/data-grid-in-table-search": "link:src/platform/packages/shared/kbn-data-grid-in-table-search",
     "@kbn/data-plugin": "link:src/platform/plugins/shared/data",
@@ -497,7 +501,7 @@
     "@kbn/data-search-plugin": "link:src/platform/test/plugin_functional/plugins/data_search",
     "@kbn/data-service": "link:src/platform/packages/shared/kbn-data-service",
     "@kbn/data-service-server": "link:src/platform/packages/shared/kbn-data-service-server",
-    "@kbn/data-sources-registry-plugin": "link:x-pack/platform/plugins/shared/data_sources_registry",
+    "@kbn/data-sources-plugin": "link:x-pack/platform/plugins/shared/data_sources",
     "@kbn/data-stream-adapter": "link:x-pack/solutions/security/packages/data-stream-adapter",
     "@kbn/data-streams": "link:src/platform/packages/private/kbn-data-streams",
     "@kbn/data-streams-example-plugin": "link:examples/data_streams_example",
@@ -514,7 +518,7 @@
     "@kbn/datemath": "link:src/platform/packages/shared/kbn-datemath",
     "@kbn/deeplinks-agent-builder": "link:src/platform/packages/shared/deeplinks/agent_builder",
     "@kbn/deeplinks-analytics": "link:src/platform/packages/shared/deeplinks/analytics",
-    "@kbn/deeplinks-data-connectors": "link:src/platform/packages/shared/deeplinks/data_connectors",
+    "@kbn/deeplinks-data-sources": "link:src/platform/packages/shared/deeplinks/data_sources",
     "@kbn/deeplinks-devtools": "link:src/platform/packages/shared/deeplinks/devtools",
     "@kbn/deeplinks-fleet": "link:src/platform/packages/shared/deeplinks/fleet",
     "@kbn/deeplinks-management": "link:src/platform/packages/shared/deeplinks/management",
@@ -562,6 +566,7 @@
     "@kbn/enterprise-search-plugin": "link:x-pack/solutions/search/plugins/enterprise_search",
     "@kbn/entities-schema": "link:x-pack/platform/packages/shared/kbn-entities-schema",
     "@kbn/entity-manager-fixture-plugin": "link:x-pack/platform/test/api_integration/apis/entity_manager/fixture_plugin",
+    "@kbn/entity-store": "link:x-pack/solutions/security/plugins/entity_store",
     "@kbn/entityManager-plugin": "link:x-pack/platform/plugins/shared/entity_manager",
     "@kbn/error-boundary-example-plugin": "link:examples/error_boundary",
     "@kbn/es-errors": "link:src/platform/packages/shared/kbn-es-errors",
@@ -624,9 +629,11 @@
     "@kbn/files-plugin": "link:src/platform/plugins/shared/files",
     "@kbn/fleet-plugin": "link:x-pack/platform/plugins/shared/fleet",
     "@kbn/flot-charts": "link:src/platform/packages/shared/kbn-flot-charts",
+    "@kbn/flyout-system-example-plugin": "link:examples/flyout_system",
     "@kbn/foo-plugin": "link:x-pack/platform/test/ui_capabilities/common/plugins/foo_plugin",
     "@kbn/fs": "link:x-pack/platform/packages/shared/kbn-fs",
     "@kbn/ftr-apis-plugin": "link:src/platform/plugins/private/ftr_apis",
+    "@kbn/ftr-llm-proxy": "link:src/platform/packages/shared/kbn-ftr-llm-proxy",
     "@kbn/functional-with-es-ssl-cases-test-plugin": "link:x-pack/platform/test/functional_with_es_ssl/plugins/cases",
     "@kbn/gen-ai-settings-plugin": "link:x-pack/platform/plugins/private/gen_ai_settings",
     "@kbn/gen-ai-streaming-response-example-plugin": "link:x-pack/examples/gen_ai_streaming_response_example",
@@ -699,6 +706,7 @@
     "@kbn/kibana-react-plugin": "link:src/platform/plugins/shared/kibana_react",
     "@kbn/kibana-usage-collection-plugin": "link:src/platform/plugins/private/kibana_usage_collection",
     "@kbn/kibana-utils-plugin": "link:src/platform/plugins/shared/kibana_utils",
+    "@kbn/kql": "link:src/platform/plugins/shared/kql",
     "@kbn/kubernetes-security-plugin": "link:x-pack/solutions/security/plugins/kubernetes_security",
     "@kbn/langchain": "link:x-pack/platform/packages/shared/kbn-langchain",
     "@kbn/langgraph-checkpoint-saver": "link:x-pack/platform/packages/shared/kbn-langgraph-checkpoint-saver",
@@ -883,6 +891,7 @@
     "@kbn/response-ops-alerts-table": "link:src/platform/packages/shared/response-ops/alerts-table",
     "@kbn/response-ops-form-generator": "link:src/platform/packages/shared/response-ops/form-generator",
     "@kbn/response-ops-recurring-schedule-form": "link:src/platform/packages/shared/response-ops/recurring-schedule-form",
+    "@kbn/response-ops-retry-service": "link:x-pack/platform/packages/shared/response-ops/retry-service",
     "@kbn/response-ops-rule-form": "link:src/platform/packages/shared/response-ops/rule_form",
     "@kbn/response-ops-rule-params": "link:src/platform/packages/shared/response-ops/rule_params",
     "@kbn/response-ops-rules-apis": "link:src/platform/packages/shared/response-ops/rules-apis",
@@ -1140,6 +1149,7 @@
     "@kbn/url-forwarding-plugin": "link:src/platform/plugins/private/url_forwarding",
     "@kbn/usage-collection-plugin": "link:src/platform/plugins/shared/usage_collection",
     "@kbn/usage-collection-test-plugin": "link:src/platform/test/plugin_functional/plugins/usage_collection",
+    "@kbn/use-observable": "link:src/platform/packages/shared/react/use_observable",
     "@kbn/use-tracked-promise": "link:src/platform/packages/shared/kbn-use-tracked-promise",
     "@kbn/user-profile-components": "link:src/platform/packages/shared/kbn-user-profile-components",
     "@kbn/user-profile-examples-plugin": "link:examples/user_profile_examples",
