Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/lens/tsconfig.json
+++ b/x-pack/platform/plugins/shared/lens/tsconfig.json
@@ -139,6 +139,7 @@
     "@kbn/react-env",
     "@kbn/core-base-browser-mocks",
     "@kbn/react-kibana-context-env",
+    "@kbn/controls-schemas",
   ],
   "exclude": ["target/**/*"]
 }
