--- a/src/platform/plugins/shared/esql/tsconfig.json
+++ b/src/platform/plugins/shared/esql/tsconfig.json
@@ -38,6 +38,7 @@
     "@kbn/field-formats-plugin",
     "@kbn/file-upload-plugin",
     "@kbn/discover-utils",
+    "@kbn/controls-schemas",
   ],
   "exclude": [
     "target/**/*",
