Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/lens/moon.yml
+++ b/x-pack/platform/plugins/shared/lens/moon.yml
@@ -152,6 +152,7 @@ dependsOn:
   - '@kbn/react-env'
   - '@kbn/core-base-browser-mocks'
   - '@kbn/react-kibana-context-env'
+  - '@kbn/controls-schemas'
 tags:
   - plugin
   - prod
