Changes from node scripts/check_mappings_update --fix

--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -1110,6 +1110,9 @@
   "data_connector": {
     "dynamic": false,
     "properties": {
+      "iconType": {
+        "type": "keyword"
+      },
       "kscIds": {
         "type": "keyword"
       },
