add EARS tester (#249439)
## Summary

Adds a component to the Workplace AI homepage that can validate your
connection to EARS (Elastic Auth Redirect Service). This will be
particularly useful once EARs is deployed to QA environments, but is
tuned right now for when running EARS locally.

This PR adds 3 new configs:
* `xpack.workplaceAIApp.ears.ui_enabled` (default false, not
preconfiged). If enabled in `kibana.dev.yaml`, this will display the
below new component of the UI
* `xpack.workplaceAIApp.ears.url` (preconfigured for
`https://localhost:8052`). We'll change this when EARS hits QA.
* `xpack.workplaceAIApp.ears.allow_insecure` (preconfigured for `true`).
Local EARS uses a self-signed cert. This will also be changed when EARS
hits QA.

We'll also probably need to add a 4th config to authenticate with EARS
when it hits QA. Right now, auth isn't necessary.

<img width="1496" height="818" alt="Screenshot 2026-01-16 at 11 00
32 AM"
src="https://github.com/user-attachments/assets/a9c68b9e-877b-4458-866e-feefa5f9a050"
/>
<img width="1487" height="782" alt="Screenshot 2026-01-16 at 11 01
02 AM"
src="https://github.com/user-attachments/assets/52af46d6-a5d1-4bdc-83f0-a1f97ae151bb"
/>
<img width="1490" height="799" alt="Screenshot 2026-01-16 at 11 01
25 AM"
src="https://github.com/user-attachments/assets/671bec67-6a16-45cd-9cf8-1a68b51a01d9"
/>

---------

Co-authored-by: Dennis Tismenko <dennis.tismenko@elastic.co>

--- a/config/serverless.workplaceai.yml
+++ b/config/serverless.workplaceai.yml
@@ -20,6 +20,10 @@ uiSettings.overrides:
 ## Enable workplace_ai plugins
 xpack.workplaceAIApp.enabled: true
 
+## EARS (elastic-auth-redirect-service) integration
+xpack.workplaceAIApp.ears.url: https://localhost:8052
+xpack.workplaceAIApp.ears.allow_insecure: true
+
 # Disable spaces
 xpack.spaces.maxSpaces: 1
 
