[CI] Add FTR benchmarks. Misc benchmark fixes. (#247579)
## Summary

This was originally part of #245334 and it seemed worthwhile to keep.

- Adds a CI step to run `@kbn/ftr-benchmarks` between the PR and it's
merge base
- Functional FTR configs were chosen based on time and area
- Open to suggestions for different configs, data is available
[here](https://docs.google.com/spreadsheets/d/166WCv00J7r41q3PCcQh-0VqcKbiaOrtq)
from the QA cluster. It has the average config duration over the last 20
runs.
- Step triggered by `doChangesMatch` or `ci:bench-ftr` GH label
- `ci:bench-ftr` added to FTR Renovate group
- Reverts #215258 and #220307 due to not working to limit `chromedriver`
patch updates
- Fixed stack overflow issue with `@kbn/profiler` due to large data sets
during benchmarks
- Fixed build cache being invalidated when it shouldn't be in
`@kbn/workspaces`
- Fixed build cache not being updated when it should be in
`@kbn/workspaces`
- Removed `depends_on` from `jest_bench` because they are not required
and it has implicit dependency anyways.

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>
(cherry picked from commit 871ba7b27e769f3c760d5a636ce1ae2133ae603d)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -507,6 +507,7 @@ src/platform/packages/shared/kbn-field-formats-common @elastic/kibana-visualizat
 src/platform/packages/shared/kbn-field-types @elastic/kibana-data-discovery
 src/platform/packages/shared/kbn-field-utils @elastic/kibana-data-discovery
 src/platform/packages/shared/kbn-flot-charts @elastic/kibana-presentation @elastic/stack-monitoring
+src/platform/packages/shared/kbn-ftr-benchmarks @elastic/kibana-operations
 src/platform/packages/shared/kbn-ftr-common-functional-services @elastic/kibana-operations @elastic/appex-qa
 src/platform/packages/shared/kbn-ftr-common-functional-ui-services @elastic/appex-qa
 src/platform/packages/shared/kbn-grok-ui @elastic/obs-onboarding-team
