--- a/renovate.json
+++ b/renovate.json
@@ -3586,46 +3586,9 @@
       "enabled": true
     },
     {
-      "matchDepNames": [
-        "chromedriver"
-      ],
-      "reviewers": [
-        "team:kibana-operations"
-      ],
-      "labels": [
-        "Team:Operations",
-        "release_note:skip",
-        "backport:skip"
-      ],
-      "enabled": true
-    },
-    {
-      "groupName": "chromedriver",
-      "matchDepNames": [
-        "chromedriver"
-      ],
-      "reviewers": [
-        "team:kibana-operations"
-      ],
-      "matchBaseBranches": [
-        "main",
-        "/^[8-9].*/"
-      ],
-      "labels": [
-        "Team:Operations",
-        "release_note:skip",
-        "backport:skip"
-      ],
-      "minimumReleaseAge": "14 days",
-      "enabled": true,
-      "matchUpdateTypes": [
-        "major",
-        "minor"
-      ]
-    },
-    {
       "groupName": "ftr",
       "matchDepNames": [
+        "chromedriver",
         "@types/chromedriver",
         "@types/selenium-webdriver",
         "geckodriver",
@@ -3642,7 +3605,8 @@
       "labels": [
         "Team:Operations",
         "release_note:skip",
-        "backport:skip"
+        "backport:skip",
+        "ci:bench-ftr"
       ],
       "minimumReleaseAge": "14 days",
       "enabled": true
