--- a/x-pack/platform/plugins/shared/security/tsconfig.json
+++ b/x-pack/platform/plugins/shared/security/tsconfig.json
@@ -96,7 +96,9 @@
     "@kbn/licensing-types",
     "@kbn/lazy-object",
     "@kbn/scout",
-    "@kbn/mock-idp-utils"
+    "@kbn/mock-idp-utils",
+    "@kbn/actions-plugin",
+    "@kbn/synthtrace"
   ],
   "exclude": ["target/**/*"]
 }
