--- a/x-pack/platform/plugins/shared/security/moon.yml
+++ b/x-pack/platform/plugins/shared/security/moon.yml
@@ -103,6 +103,8 @@ dependsOn:
   - '@kbn/lazy-object'
   - '@kbn/scout'
   - '@kbn/mock-idp-utils'
+  - '@kbn/actions-plugin'
+  - '@kbn/synthtrace'
 tags:
   - plugin
   - prod
