refactor bulk delete to delete ALL + async
instead of just first 1000

--- a/x-pack/platform/plugins/shared/data_sources/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/data_sources/kibana.jsonc
@@ -11,7 +11,7 @@
     "server": true,
     "configPath": ["xpack", "dataSources"],
     "requiredPlugins": ["actions", "dataCatalog", "agentBuilder", "workflowsManagement", "triggersActionsUi"],
-    "optionalPlugins": [],
+    "optionalPlugins": ["taskManager"],
     "requiredBundles": ["kibanaReact"],
     "extraPublicDirs": [
       "common"
