--- a/x-pack/platform/plugins/shared/triggers_actions_ui/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/triggers_actions_ui/kibana.jsonc
@@ -16,6 +16,7 @@
       "kibanaReact",
       "kibanaUtils",
       "unifiedSearch",
+      "kql",
       "fieldFormats",
       "dataViews",
       "dataViewEditor",
