Changes from node scripts/regenerate_moon_projects.js --update

--- a/src/platform/packages/shared/response-ops/rule_form/moon.yml
+++ b/src/platform/packages/shared/response-ops/rule_form/moon.yml
@@ -49,6 +49,7 @@ dependsOn:
   - '@kbn/actions-plugin'
   - '@kbn/react-hooks'
   - '@kbn/response-ops-rules-apis'
+  - '@kbn/kql'
 tags:
   - shared-browser
   - package
