Add missing optional dependency towards `timelines`

--- a/x-pack/platform/plugins/shared/osquery/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/osquery/kibana.jsonc
@@ -31,7 +31,8 @@
       "lens",
       "telemetry",
       "cases",
-      "spaces"
+      "spaces",
+      "timelines"
     ],
     "requiredBundles": [
       "esUiShared",
