Relocate package `@kbn/securitysolution-t-grid`

--- a/x-pack/platform/packages/shared/kbn-securitysolution-t-grid/kibana.jsonc
+++ b/x-pack/platform/packages/shared/kbn-securitysolution-t-grid/kibana.jsonc
@@ -4,6 +4,6 @@
   "owner": [
     "@elastic/security-detection-engine"
   ],
-  "group": "security",
-  "visibility": "private"
+  "group": "platform",
+  "visibility": "shared"
 }
