Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/packages/shared/kbn-securitysolution-t-grid/moon.yml
+++ b/x-pack/platform/packages/shared/kbn-securitysolution-t-grid/moon.yml
@@ -21,8 +21,8 @@ tags:
   - shared-common
   - package
   - prod
-  - group-security
-  - private
+  - group-platform
+  - shared
 fileGroups:
   src:
     - '**/*.ts'
