register url_drilldown

--- a/x-pack/platform/plugins/private/drilldowns/url_drilldown/moon.yml
+++ b/x-pack/platform/plugins/private/drilldowns/url_drilldown/moon.yml
@@ -42,7 +42,9 @@ tags:
   - jest-unit-tests
 fileGroups:
   src:
+    - common/**/*
     - public/**/*
+    - server/**/*
     - '!target/**/*'
 tasks:
   jest:
