--- a/x-pack/platform/plugins/private/drilldowns/url_drilldown/tsconfig.json
+++ b/x-pack/platform/plugins/private/drilldowns/url_drilldown/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "target/types",
   },
-  "include": ["public/**/*"],
+  "include": ["common/**/*", "public/**/*", "server/**/*"],
   "kbn_references": [
     "@kbn/core",
     "@kbn/ui-actions-enhanced-plugin",
