--- a/x-pack/solutions/security/plugins/entity_store/kibana.jsonc
+++ b/x-pack/solutions/security/plugins/entity_store/kibana.jsonc
@@ -14,6 +14,9 @@
       "taskManager",
       "dataViews"
     ],
-    "optionalPlugins": []
+    "optionalPlugins": [
+      "security",
+      "encryptedSavedObjects"
+    ]
   }
 }
