Changes from node scripts/check_mappings_update --fix

--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -1303,6 +1303,14 @@
       }
     }
   },
+  "entity-store-api-key": {
+    "dynamic": false,
+    "properties": {
+      "apiKey": {
+        "type": "binary"
+      }
+    }
+  },
   "epm-packages": {
     "dynamic": false,
     "properties": {
