--- a/x-pack/solutions/security/plugins/entity_store/tsconfig.json
+++ b/x-pack/solutions/security/plugins/entity_store/tsconfig.json
@@ -26,5 +26,11 @@
     "@kbn/config-schema",
     "@kbn/logging-mocks",
     "@kbn/spaces-plugin",
+    "@kbn/data-views-plugin",
+    "@kbn/es-types",
+    "@kbn/security-plugin-types-server",
+    "@kbn/encrypted-saved-objects-plugin",
+    "@kbn/security-plugin",
+    "@kbn/core-saved-objects-server",
   ]
 }
