--- a/x-pack/solutions/security/plugins/entity_store/moon.yml
+++ b/x-pack/solutions/security/plugins/entity_store/moon.yml
@@ -32,6 +32,11 @@ dependsOn:
   - '@kbn/logging-mocks'
   - '@kbn/spaces-plugin'
   - '@kbn/data-views-plugin'
+  - '@kbn/es-types'
+  - '@kbn/security-plugin-types-server'
+  - '@kbn/encrypted-saved-objects-plugin'
+  - '@kbn/security-plugin'
+  - '@kbn/core-saved-objects-server'
 tags:
   - plugin
   - prod
