--- a/x-pack/platform/plugins/shared/inference/tsconfig.json
+++ b/x-pack/platform/plugins/shared/inference/tsconfig.json
@@ -43,6 +43,7 @@
     "@kbn/inference-tracing",
     "@kbn/core-ui-settings-common",
     "@kbn/setup-node-env",
-    "@kbn/es-errors"
+    "@kbn/es-errors",
+    "@kbn/dev-utils"
   ]
 }
