--- a/x-pack/platform/plugins/private/drilldowns/url_drilldown/moon.yml
+++ b/x-pack/platform/plugins/private/drilldowns/url_drilldown/moon.yml
@@ -34,6 +34,7 @@ dependsOn:
   - '@kbn/core-ui-settings-browser'
   - '@kbn/core-theme-browser-mocks'
   - '@kbn/presentation-publishing'
+  - '@kbn/config-schema'
 tags:
   - plugin
   - prod
