Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/data_sources/tsconfig.json
+++ b/x-pack/platform/plugins/shared/data_sources/tsconfig.json
@@ -42,6 +42,7 @@
     "@kbn/agent-builder-plugin",
     "@kbn/deeplinks-workflows",
     "@kbn/deeplinks-agent-builder",
-    "@kbn/connector-schemas"
+    "@kbn/connector-schemas",
+    "@kbn/task-manager-plugin"
   ]
 }
