Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/data_sources/moon.yml
+++ b/x-pack/platform/plugins/shared/data_sources/moon.yml
@@ -48,6 +48,7 @@ dependsOn:
   - '@kbn/deeplinks-workflows'
   - '@kbn/deeplinks-agent-builder'
   - '@kbn/connector-schemas'
+  - '@kbn/task-manager-plugin'
 tags:
   - plugin
   - prod
