--- a/x-pack/solutions/observability/plugins/infra/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/infra/tsconfig.json
@@ -83,10 +83,14 @@
     "@kbn/apm-data-access-plugin",
     "@kbn/ebt-tools",
     "@kbn/shared-ux-utility",
+    "@kbn/management-settings-components-field-row",
+    "@kbn/core-ui-settings-browser",
+    "@kbn/core-saved-objects-api-server",
     "@kbn/securitysolution-io-ts-utils",
     "@kbn/serverless",
     "@kbn/elastic-agent-utils",
     "@kbn/dashboard-plugin",
+    "@kbn/shared-svg",
     "@kbn/aiops-log-rate-analysis",
     "@kbn/search-types",
     "@kbn/alerting-comparators",
@@ -110,6 +114,7 @@
     "@kbn/deeplinks-management",
     "@kbn/response-ops-rule-form",
     "@kbn/fields-metadata-plugin",
+    "@kbn/deeplinks-analytics",
     "@kbn/core-chrome-browser",
     "@kbn/object-utils",
     "@kbn/coloring",
