--- a/x-pack/platform/plugins/shared/fleet/cypress/moon.yml
+++ b/x-pack/platform/plugins/shared/fleet/cypress/moon.yml
@@ -34,5 +34,9 @@ tags:
 fileGroups:
   src:
     - '**/*'
+    - ./cypress.config.ts
+    - ./cypress.config.space_awareness.ts
+    - ./cypress_ci.config.ts
+    - ./cypress_ci.config.space_awareness.ts
     - '!target/**/*'
 tasks: {}
