--- a/x-pack/platform/plugins/shared/fleet/cypress/tsconfig.json
+++ b/x-pack/platform/plugins/shared/fleet/cypress/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@kbn/tsconfig-base/tsconfig.json",
   "include": [
     "**/*",
-    "../../../../../../typings/**/*"
+    "./cypress.config.ts",
+    "./cypress.config.space_awareness.ts",
+    "./cypress_ci.config.ts",
+    "./cypress_ci.config.space_awareness.ts"
   ],
   "exclude": [
     "target/**/*"
