slo plugin to optional

--- a/x-pack/solutions/observability/plugins/apm/kibana.jsonc
+++ b/x-pack/solutions/observability/plugins/apm/kibana.jsonc
@@ -27,7 +27,6 @@
       "observabilityShared",
       "exploratoryView",
       "ruleRegistry",
-      "slo",
       "triggersActionsUi",
       "share",
       "unifiedSearch",
@@ -63,7 +62,8 @@
       "observabilityAIAssistant",
       "observabilityAgentBuilder",
       "share",
-      "agentBuilder"
+      "agentBuilder",
+      "slo",
     ],
     "requiredBundles": [
       "fleet",
