Changes from node scripts/lint_ts_projects --fix

--- a/src/platform/plugins/shared/discover_shared/tsconfig.json
+++ b/src/platform/plugins/shared/discover_shared/tsconfig.json
@@ -13,5 +13,7 @@
     "@kbn/apm-types",
     "@kbn/apm-types-shared",
     "@kbn/data-views-plugin",
+    "@kbn/deeplinks-observability",
+    "@kbn/slo-schema",
   ]
 }
