--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -25,10 +25,18 @@
     "@kbn/spaces-utils",
     "@kbn/search-types",
     "@kbn/core-di",
+    "@kbn/core-di-browser",
     "@kbn/core-di-server",
     "@kbn/esql-utils",
     "@kbn/response-ops-retry-service",
     "@kbn/esql-language",
+    "@kbn/core-application-browser",
+    "@kbn/shared-ux-router",
+    "@kbn/management-plugin",
+    "@kbn/code-editor",
+    "@kbn/i18n-react",
+    "@kbn/monaco",
+    "@kbn/esql-types",
     "@kbn/core-http-server-mocks",
     "@kbn/core-security-common",
     "@kbn/core-elasticsearch-server-mocks",
