Changes from node scripts/regenerate_moon_projects.js --update

--- a/src/platform/plugins/shared/discover_shared/moon.yml
+++ b/src/platform/plugins/shared/discover_shared/moon.yml
@@ -25,6 +25,8 @@ dependsOn:
   - '@kbn/apm-types'
   - '@kbn/apm-types-shared'
   - '@kbn/data-views-plugin'
+  - '@kbn/deeplinks-observability'
+  - '@kbn/slo-schema'
 tags:
   - plugin
   - prod
