Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -44,7 +44,9 @@
     "@kbn/core-elasticsearch-client-server-mocks",
     "@kbn/es-errors",
     "@kbn/zod",
-    "@kbn/core-di-internal"
+    "@kbn/core-di-internal",
+    "@kbn/i18n",
+    "@kbn/zod-helpers"
   ],
   "exclude": [
     "target/**/*"
