--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -78,6 +78,8 @@
       "@kbn/alerting-fixture-plugin/*": ["x-pack/platform/test/functional_with_es_ssl/plugins/alerts/*"],
       "@kbn/alerting-plugin": ["x-pack/platform/plugins/shared/alerting"],
       "@kbn/alerting-plugin/*": ["x-pack/platform/plugins/shared/alerting/*"],
+      "@kbn/alerting-rule-schemas": ["x-pack/platform/packages/shared/kbn-alerting-rule-schemas"],
+      "@kbn/alerting-rule-schemas/*": ["x-pack/platform/packages/shared/kbn-alerting-rule-schemas/*"],
       "@kbn/alerting-rule-utils": ["x-pack/platform/packages/shared/alerting-rule-utils"],
       "@kbn/alerting-rule-utils/*": ["x-pack/platform/packages/shared/alerting-rule-utils/*"],
       "@kbn/alerting-state-types": ["x-pack/platform/packages/private/kbn-alerting-state-types"],
